--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "no-hand-day",
+  "name": "oh_my_luna_front",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,17 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "4.35.3",
+    "@tanstack/react-query-devtools": "4.35.3",
     "@types/node": "20.6.0",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "1.5.0",
+    "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "moment": "^2.29.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "zustand": "4.4.1"
+  },
+  "devDependencies": {
+    "@tanstack/eslint-plugin-query": "4.34.1"
   }
 }
