--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "oh_my_luna_front",
+  "name": "no_hand_day",
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3003",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -16,15 +16,15 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "1.5.0",
-    "date-fns": "^2.30.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
+    "lunar-calendar": "^0.1.4",
     "moment": "^2.29.4",
     "next": "13.4.19",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
+    "tailwindcss": "^3.3.3",
     "typescript": "5.2.2",
     "zustand": "4.4.1"
   },
